@@ -12,8 +12,10 @@ Changelog for sg3_utils-1.26 [20080219]
   - sg_verify: add --vrprotect= option
   - sg_vpd: add nominal form factor to block dev. char. VPD page
     - add --maxlen= option to set allocation length in cdb
+    - logic for "NAA Locally administered" identifier
   - sg_inq: add --maxlen= option that does same as --len=
-    - moce version descriptors into sg_inq_data.c file
+    - move version descriptors into sg_inq_data.c file
+    - logic for "NAA Locally administered" identifier
   - sg_write_long: add examples section to man page
   - sg_sat_phy_event: copied from examples directory and enhanced,
     rename original to sg__sat_phy_event
